--- a/style/style.styl
+++ b/style/style.styl
@@ -5,10 +5,21 @@ body
 header  
     width 100%
     height: 100px
+    box-shadow rgba(0, 0, 0, 0.09) 0px 3px 12px
+    position: relative
+
 
     .wrapper
         max-width: 1300px
         margin: auto
+        display: flex
+        align-items: center
+        height: 100%
+        justify-content: space-between
+        padding 0 10px
+        background: white
+        z-index 10
+        position relative
 
         &-logo
             width: 50px
@@ -17,5 +28,26 @@ header
             img 
                 width: 100%
                 height: 100%
+
+        &-humburger
+            width: 50px
+            height 30px
+            display: flex
+            flex-direction: column
+            justify-content: space-between
+            cursor pointer
+            margin-right: 20px
+
+
+
+            span 
+                border: 2px solid black
+
+    nav 
+        position absolute
+        left: 50%
+        transform: translateX(-50%)translateY(-100px)
+        z-index 1
+
 
 
